--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,37 @@
+@article{locke2011,
+  title={Comparative and demographic analysis of orang-utan genomes},
+  author={Locke, Devin P and Hillier, LaDeana W and Warren, Wesley C and Worley, Kim C and Nazareth, Lynne V and Muzny, Donna M and Yang, Shiaw-Pyng and Wang, Zhengyuan and Chinwalla, Asif T and Minx, Pat and others},
+  journal={Nature},
+  volume={469},
+  number={7331},
+  pages={529},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{hudson1987test,
+  title={A test of neutral molecular evolution based on nucleotide data},
+  author={Hudson, Richard R and Kreitman, Martin and Aguad{\'e}, Montserrat},
+  journal={Genetics},
+  volume={116},
+  number={1},
+  pages={153--159},
+  year={1987},
+  publisher={Genetics Soc America}
+}
+
+@article{kornegay1994molecular,
+  title={Molecular adaptation of a leaf-eating bird: stomach lysozyme of the hoatzin.},
+  author={Kornegay, Janet R and Schilling, James W and Wilson, Allan C},
+  journal={Molecular Biology and Evolution},
+  volume={11},
+  number={6},
+  pages={921--928},
+  year={1994}
+}
+
+
+
 @book{darwin1859,
 
   address = {London},
