--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -33,7 +33,8 @@
 
 %FOR compiling on xelatex 
 %\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
-%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+%%comment out this line for overleaf
+%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
 \usepackage[colorinlistoftodos]{todonotes}  % ,disable  ,disable
 
 
