--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -32,10 +32,10 @@
 \newcommand{\half}{\tfrac{1}{2}}
 
 %FOR compiling on xelatex 
-\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+%\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
 %%comment out this line for overleaf
-\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
-\usepackage[colorinlistoftodos ,disable]{todonotes}  % ,disable  ,disable
+%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
+\usepackage[colorinlistoftodos]{todonotes}  % ,disable  ,disable
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
