Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,80 @@
+@article{cousminer2013genome,
+  title={Genome-wide association and longitudinal analyses reveal genetic loci linking pubertal height growth, pubertal timing and childhood adiposity},
+  author={Cousminer, Diana L and Berry, Diane J and Timpson, Nicholas J and Ang, Wei and Thiering, Elisabeth and Byrne, Enda M and Taal, H Rob and Huikari, Ville and Bradfield, Jonathan P and Kerkhof, Marjan and others},
+  journal={Human molecular genetics},
+  volume={22},
+  number={13},
+  pages={2735--2747},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
+@article{ayllon2015vgll3,
+  title={The vgll3 locus controls age at maturity in wild and domesticated Atlantic salmon (Salmo salar L.) males},
+  author={Ayllon, Fernando and Kj{\ae}rner-Semb, Erik and Furmanek, Tomasz and Wennevik, Vidar and Solberg, Monica F and Dahle, Geir and Taranger, Geir Lasse and Glover, Kevin A and Alm{\'e}n, Markus S{\"a}llman and Rubin, Carl J and others},
+  journal={PLoS genetics},
+  volume={11},
+  number={11},
+  pages={e1005628},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{barson2015sex,
+  title={Sex-dependent dominance at a single locus maintains variation in age at maturity in salmon},
+  author={Barson, Nicola J and Aykanat, Tutku and Hindar, Kjetil and Baranski, Matthew and Bolstad, Geir H and Fiske, Peder and Jacq, C{\'e}leste and Jensen, Arne J and Johnston, Susan E and Karlsson, Sten and others},
+  journal={Nature},
+  volume={528},
+  number={7582},
+  pages={405},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{queller1992quantitative,
+  title={Quantitative genetics, inclusive fitness, and group selection},
+  author={Queller, David C},
+  journal={The American Naturalist},
+  volume={139},
+  number={3},
+  pages={540--558},
+  year={1992},
+  publisher={University of Chicago Press}
+}
+
+@article{hamilton1964genetical2,
+  title={The genetical evolution of social behaviour. II},
+  author={Hamilton, William D},
+  journal={Journal of theoretical biology},
+  volume={7},
+  number={1},
+  pages={17--52},
+  year={1964},
+  publisher={Elsevier}
+}
+
+@article{hamilton1964genetical,
+  title={The genetical evolution of social behaviour. II},
+  author={Hamilton, William D},
+  journal={Journal of theoretical biology},
+  volume={7},
+  number={1},
+  pages={17--52},
+  year={1964},
+  publisher={Elsevier}
+}
+
+@article{pickrell2016detection,
+  title={Detection and interpretation of shared genetic influences on 42 human traits},
+  author={Pickrell, Joseph K and Berisa, Tomaz and Liu, Jimmy Z and S{\'e}gurel, Laure and Tung, Joyce Y and Hinds, David A},
+  journal={Nature genetics},
+  volume={48},
+  number={7},
+  pages={709},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
 @article{locke2011,
   title={Comparative and demographic analysis of orang-utan genomes},
   author={Locke, Devin P and Hillier, LaDeana W and Warren, Wesley C and Worley, Kim C and Nazareth, Lynne V and Muzny, Donna M and Yang, Shiaw-Pyng and Wang, Zhengyuan and Chinwalla, Asif T and Minx, Pat and others},
