Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{kruuk2002antler,
+  title={Antler size in red deer: heritability and selection but no evolution},
+  author={Kruuk, Loeske EB and Slate, Jon and Pemberton, Josephine M and Brotherstone, Sue and Guinness, Fiona and Clutton-Brock, Tim},
+  journal={Evolution},
+  volume={56},
+  number={8},
+  pages={1683--1695},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
 @article{cousminer2013genome,
   title={Genome-wide association and longitudinal analyses reveal genetic loci linking pubertal height growth, pubertal timing and childhood adiposity},
   author={Cousminer, Diana L and Berry, Diane J and Timpson, Nicholas J and Ang, Wei and Thiering, Elisabeth and Byrne, Enda M and Taal, H Rob and Huikari, Ville and Bradfield, Jonathan P and Kerkhof, Marjan and others},
