--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -35,7 +35,7 @@
 \renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
 %%comment out this line for overleaf
 \renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
-\usepackage[colorinlistoftodos]{todonotes  ,disable}  % ,disable  ,disable
+\usepackage[colorinlistoftodos  ,disable]{todonotes}  % ,disable  ,disable
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
