Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,27 @@
+@article{smith1964kin,
+  title={Group selection and kin selection},
+  author={{Maynard Smith}, J},
+  journal={Nature},
+  volume={201},
+  number={4924},
+  pages={1145},
+  year={1964},
+  publisher={Nature Publishing Group}
+}
+
+
+
+
+@article{Dempster:55,
+  title={Maintenance of genetic heterogeneity},
+  author={Dempster, ER},
+  journal={Cold Spring Harb Symp Quant Biol},
+  volume={20},
+  number={},
+  pages={25--32},
+  year={1955},
+}
+
 @article{kruuk2002antler,
   title={Antler size in red deer: heritability and selection but no evolution},
   author={Kruuk, Loeske EB and Slate, Jon and Pemberton, Josephine M and Brotherstone, Sue and Guinness, Fiona and Clutton-Brock, Tim},
