--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,27 @@
+
+
+
+
+@InBook{Williams:66,
+  author = 	 {Williams,  George Christopher},
+  ALTeditor = 	 {},
+  title = 	 {Adaptation and Natural Selection},
+  OPTchapter = 	 {},
+  publisher = 	 {Princeton},
+  year = 	 {1966},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTpages = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @article{smith1964kin,
   title={Group selection and kin selection},
   author={{Maynard Smith}, J},
