Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,7 +1,3 @@
-
-
-
-
 @InBook{Williams:66,
   author = 	 {Williams,  George Christopher},
   ALTeditor = 	 {},
@@ -33,6 +29,16 @@
   publisher={Nature Publishing Group}
 }
 
+@article{feder2017,
+  title={A spatio-temporal assessment of simian/human immunodeficiency virus (SHIV) evolution reveals a highly dynamic process within the host},
+  author={Feder, Alison F and Kline, Christopher and Polacino, Patricia and Cottrell, Mackenzie and Kashuba, Angela DM and Keele, Brandon F and Hu, Shiu-Lok and Petrov, Dmitri A and Pennings, Pleuni S and Ambrose, Zandrea},
+  journal={PLoS pathogens},
+  volume={13},
+  number={5},
+  pages={e1006358},
+  year={2017},
+  publisher={Public Library of Science}
+}
 
 
 
