Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -18,6 +18,17 @@
   OPTannote = 	 {}
 }
 
+@article{marciniak2017,
+  title={Harnessing ancient genomes to study the history of human adaptation},
+  author={Marciniak, Stephanie and Perry, George H},
+  journal={Nature Reviews Genetics},
+  volume={18},
+  number={11},
+  pages={659},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
 @article{smith1964kin,
   title={Group selection and kin selection},
   author={{Maynard Smith}, J},
