Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,13 @@
+@article{wright2015adaptation,
+  title={Adaptation to heavy-metal contaminated environments proceeds via selection on pre-existing genetic variation},
+  author={Wright, Kevin M and Hellsten, Uffe and Xu, Chenling and Jeong, Annie L and Sreedasyam, Avinash and Chapman, Jarrod A and Schmutz, Jeremy and Coop, Graham and Rokhsar, Daniel S and Willis, John H},
+  journal={bioRxiv},
+  pages={029900},
+  year={2015},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+
 @InBook{Williams:66,
   author = 	 {Williams,  George Christopher},
   ALTeditor = 	 {},
