Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,36 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@book{darwin1888descent,
+  title={The descent of man and selection in relation to sex},
+  author={Darwin, Charles},
+  volume={1},
+  year={1888},
+  publisher={Murray}
+}
+
+@article{fisher1915evolution,
+  title={The evolution of sexual preference},
+  author={Fisher, Ronald A},
+  journal={The Eugenics Review},
+  volume={7},
+  number={3},
+  pages={184},
+  year={1915},
+  publisher={Oliver and Boyd}
+}
+
+@article{krakauer2005kin,
+  title={Kin selection and cooperative courtship in wild turkeys},
+  author={Krakauer, Alan H},
+  journal={Nature},
+  volume={434},
+  number={7029},
+  pages={69},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
 
 @InBook{Williams:66,
   author = 	 {Williams,  George Christopher},
