Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{hopkins2015m,
+  title={I'm sexy and I glow it: female ornamentation in a nocturnal capital breeder},
+  author={Hopkins, Juhani and Baudry, Gautier and Candolin, Ulrika and Kaitala, Arja},
+  journal={Biology letters},
+  volume={11},
+  number={10},
+  pages={20150599},
+  year={2015},
+  publisher={The Royal Society}
+}
+
 @book{darwin1888descent,
   title={The descent of man and selection in relation to sex},
   author={Darwin, Charles},
