Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -129,8 +129,8 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\include{chapter-03}
 \include{Chapters/Pheno_var}
 \include{Chapters/Response_to_sel}
-\include{Chapters/chapter-05}
-\include{Chapters/chapter-06}
+\include{Chapters/One_locus_selection}
+\include{Chapters/Genetic_drift_selection}
 %\include{chapter-07}
 \include{Chapters/chapter-08}
 \include{Chapters/multi_locus_sel}
