Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{haldane1963,
+  title={Polymorphism due to selection of varying direction},
+  author={Haldane, JBS and Jayakar, SD},
+  journal={Journal of Genetics},
+  volume={58},
+  number={2},
+  pages={237--242},
+  year={1963},
+  publisher={Springer}
+}
+
 @article{hopkins2015m,
   title={I'm sexy and I glow it: female ornamentation in a nocturnal capital breeder},
   author={Hopkins, Juhani and Baudry, Gautier and Candolin, Ulrika and Kaitala, Arja},
