Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{akccay2016,
+  title={There is no fitness but fitness, and the lineage is its bearer},
+  author={Ak{\c{c}}ay, Erol and Van Cleve, Jeremy},
+  journal={Phil. Trans. R. Soc. B},
+  volume={371},
+  number={1687},
+  pages={20150085},
+  year={2016},
+  publisher={The Royal Society}
+}
+
 @article{haldane1963,
   title={Polymorphism due to selection of varying direction},
   author={Haldane, JBS and Jayakar, SD},
