Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{johnston2013life,
+  title={Life history trade-offs at a single locus maintain sexually selected genetic variation},
+  author={Johnston, Susan E and Gratten, Jacob and Berenos, Camillo and Pilkington, Jill G and Clutton-Brock, Tim H and Pemberton, Josephine M and Slate, Jon},
+  journal={Nature},
+  volume={502},
+  number={7469},
+  pages={93},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
 @article{akccay2016,
   title={There is no fitness but fitness, and the lineage is its bearer},
   author={Ak{\c{c}}ay, Erol and Van Cleve, Jeremy},
@@ -16,6 +27,17 @@
   pages={20150085},
   year={2016},
   publisher={The Royal Society}
+}
+
+@article{cassa2017,
+  title={Estimating the selective effects of heterozygous protein-truncating variants from human exome data},
+  author={Cassa, Christopher A and Weghorn, Donate and Balick, Daniel J and Jordan, Daniel M and Nusinow, David and Samocha, Kaitlin E and O'Donnell-Luria, Anne and MacArthur, Daniel G and Daly, Mark J and Beier, David R and others},
+  journal={Nature genetics},
+  volume={49},
+  number={5},
+  pages={806},
+  year={2017},
+  publisher={Nature Publishing Group}
 }
 
 @article{haldane1963,
