Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -11,6 +11,7 @@
 \usepackage{graphicx}
 \usepackage{rotating}
 \usepackage{wasysym}
+\usepackage{array}
 %\usepackage[normalem]{ulem}   %%MArs/Venus symbols
 %\usepackage{marginnote}
 \usepackage{color,booktabs}
