--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{owen1972polymorphic,
+  title={Polymorphic mimicry in a population of the African butterfly, Pseudacraea eurytus (L.)(Lep. Nymphalidae)},
+  author={Owen, DF and Chanter, DO},
+  journal={Insect Systematics \& Evolution},
+  volume={3},
+  number={4},
+  pages={258--266},
+  year={1972},
+  publisher={Brill}
+}
+
 @article{johnston2013life,
   title={Life history trade-offs at a single locus maintain sexually selected genetic variation},
   author={Johnston, Susan E and Gratten, Jacob and Berenos, Camillo and Pilkington, Jill G and Clutton-Brock, Tim H and Pemberton, Josephine M and Slate, Jon},
