added freq dependent selection

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -18,6 +18,28 @@
   publisher={National Acad Sciences}
 }
 
+@article{smithson1997negative,
+  title={Negative frequency-dependent selection by pollinators on artificial flowers without rewards},
+  author={Smithson, Ann and Macnair, Mark R},
+  journal={Evolution},
+  volume={51},
+  number={3},
+  pages={715--723},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@article{gigord2001negative,
+  title={Negative frequency-dependent selection maintains a dramatic flower color polymorphism in the rewardless orchid Dactylorhiza sambucina (L.) Soo},
+  author={Gigord, Luc DB and Macnair, Mark R and Smithson, Ann},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={98},
+  number={11},
+  pages={6253--6255},
+  year={2001},
+  publisher={National Acad Sciences}
+}
+
 @article{nachman2003genetic,
   title={The genetic basis of adaptive melanism in pocket mice},
   author={Nachman, Michael W and Hoekstra, Hopi E and D'Agostino, Susan L},
