added sel-drift Dob

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{dobzhansky1957experimental,
+  title={An experimental study of interaction between genetic drift and natural selection},
+  author={Dobzhansky, Theodosius and Pavlovsky, Olga},
+  journal={Evolution},
+  volume={11},
+  number={3},
+  pages={311--319},
+  year={1957},
+  publisher={Wiley Online Library}
+}
+
 @article{gigord2001negative,
   title={Negative frequency-dependent selection maintains a dramatic flower color polymorphism in the rewardless orchid Dactylorhiza sambucina (L.) Soo},
   author={Gigord, Luc DB and Macnair, Mark R and Smithson, Ann},
