added Galtier figure

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,18 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+
+@article{galtier2016adaptive,
+  title={Adaptive protein evolution in animals and the effective population size hypothesis},
+  author={Galtier, Nicolas},
+  journal={PLoS genetics},
+  volume={12},
+  number={1},
+  pages={e1005774},
+  year={2016},
+  publisher={Public Library of Science}
+}
+
 @article{dobzhansky1957experimental,
   title={An experimental study of interaction between genetic drift and natural selection},
   author={Dobzhansky, Theodosius and Pavlovsky, Olga},
