--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -522,6 +522,15 @@
   publisher={Public Library of Science}
 }
 
+@article{sams2018fine,
+  title={Fine-Scale Resolution of Runs of Homozygosity Reveal Patterns of Inbreeding and Substantial Overlap with Recessive Disease Genotypes in Domestic Dogs},
+  author={Sams, Aaron J and Boyko, Adam R},
+  journal={G3: Genes, Genomes, Genetics},
+  pages={g3--200836},
+  year={2018},
+  publisher={G3: Genes, Genomes, Genetics}
+}
+
 @article {Sams:18,
 	author = {Sams, Aaron J and Boyko, Adam R},
 	title = {Fine-scale resolution and analysis of runs of homozygosity in domestic dogs},
