--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -522,6 +522,28 @@
   publisher={Public Library of Science}
 }
 
+@article{kupper2016supergene,
+  title={A supergene determines highly divergent male reproductive morphs in the ruff},
+  author={K{\"u}pper, Clemens and Stocks, Michael and Risse, Judith E and dos Remedios, Natalie and Farrell, Lindsay L and McRae, Susan B and Morgan, Tawna C and Karlionova, Natalia and Pinchuk, Pavel and Verkuil, Yvonne I and others},
+  journal={Nature Genetics},
+  volume={48},
+  number={1},
+  pages={79},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{lamichhaney2016structural,
+  title={Structural genomic changes underlie alternative reproductive strategies in the ruff (Philomachus pugnax)},
+  author={Lamichhaney, Sangeet and Fan, Guangyi and Widemo, Fredrik and Gunnarsson, Ulrika and Thalmann, Doreen Schwochow and Hoeppner, Marc P and Kerje, Susanne and Gustafson, Ulla and Shi, Chengcheng and Zhang, He and others},
+  journal={Nature Genetics},
+  volume={48},
+  number={1},
+  pages={84},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
 @article{sams2018fine,
   title={Fine-Scale Resolution of Runs of Homozygosity Reveal Patterns of Inbreeding and Substantial Overlap with Recessive Disease Genotypes in Domestic Dogs},
   author={Sams, Aaron J and Boyko, Adam R},
