added to fix prob.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -522,6 +522,27 @@
   publisher={Public Library of Science}
 }
 
+@article{fisher1923xxi,
+  title={XXI.—on the dominance ratio},
+  author={Fisher, Ronald A},
+  journal={Proceedings of the royal society of Edinburgh},
+  volume={42},
+  pages={321--341},
+  year={1923},
+  publisher={Royal Society of Edinburgh Scotland Foundation}
+}
+
+@inproceedings{haldane1927mathematical,
+  title={A mathematical theory of natural and artificial selection, part V: selection and mutation},
+  author={Haldane, John Burdon Sanderson},
+  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
+  volume={23},
+  number={7},
+  pages={838--844},
+  year={1927},
+  organization={Cambridge University Press}
+}
+
 @article{kupper2016supergene,
   title={A supergene determines highly divergent male reproductive morphs in the ruff},
   author={K{\"u}pper, Clemens and Stocks, Michael and Risse, Judith E and dos Remedios, Natalie and Farrell, Lindsay L and McRae, Susan B and Morgan, Tawna C and Karlionova, Natalia and Pinchuk, Pavel and Verkuil, Yvonne I and others},
