added to fix prob.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -522,6 +522,17 @@
   publisher={Public Library of Science}
 }
 
+@article{widemo1998alternative,
+  title={Alternative reproductive strategies in the ruff, Philomachus pugnax: a mixed ESS?},
+  author={Widemo, Fredrik},
+  journal={Animal Behaviour},
+  volume={56},
+  number={2},
+  pages={329--336},
+  year={1998},
+  publisher={Academic Press}
+}
+
 @article{fisher1923xxi,
   title={XXI.—on the dominance ratio},
   author={Fisher, Ronald A},
