added to fix prob.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -522,6 +522,17 @@
   publisher={Public Library of Science}
 }
 
+@article{jukema2006permanent,
+  title={Permanent female mimics in a lekking shorebird},
+  author={Jukema, Joop and Piersma, Theunis},
+  journal={Biology letters},
+  volume={2},
+  number={2},
+  pages={161--164},
+  year={2006},
+  publisher={The Royal Society}
+}
+
 @article{widemo1998alternative,
   title={Alternative reproductive strategies in the ruff, Philomachus pugnax: a mixed ESS?},
   author={Widemo, Fredrik},
