updated release pdf

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -39,6 +39,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{lenormand1999tracking,
+  title={Tracking the evolution of insecticide resistance in the mosquito Culex pipiens},
+  author={Lenormand, Thomas and Bourguet, Denis and Guillemaud, Thomas and Raymond, Michel},
+  journal={Nature},
+  volume={400},
+  number={6747},
+  pages={861},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
 
 @article{smithson1997negative,
   title={Negative frequency-dependent selection by pollinators on artificial flowers without rewards},
