--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -39,6 +39,18 @@
   publisher={Wiley Online Library}
 }
 
+
+@article{howes2013spatial,
+  title={Spatial distribution of G6PD deficiency variants across malaria-endemic regions},
+  author={Howes, Rosalind E and Dewi, Mewahyu and Piel, Fr{\'e}d{\'e}ric B and Monteiro, Wuelton M and Battle, Katherine E and Messina, Jane P and Sakuntabhai, Anavaj and Satyagraha, Ari W and Williams, Thomas N and Baird, J Kevin and others},
+  journal={Malaria journal},
+  volume={12},
+  number={1},
+  pages={418},
+  year={2013},
+  publisher={BioMed Central}
+}
+
 @article{lenormand1999tracking,
   title={Tracking the evolution of insecticide resistance in the mosquito Culex pipiens},
   author={Lenormand, Thomas and Bourguet, Denis and Guillemaud, Thomas and Raymond, Michel},
