Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,111 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{ohta1987very,
+  title={Very slightly deleterious mutations and the molecular clock},
+  author={Ohta, Tomoko},
+  journal={Journal of Molecular Evolution},
+  volume={26},
+  number={1-2},
+  pages={1--6},
+  year={1987},
+  publisher={Springer}
+}
+
+@article{nash2005selection,
+  title={Selection strength and hitchhiking around two anti-malarial resistance genes},
+  author={Nash, Denae and Nair, Shalini and Mayxay, Mayfong and Newton, Paul N and Guthmann, Jean-Paul and Nosten, Fran{\c{c}}ois and Anderson, Tim JC},
+  journal={Proceedings of the Royal Society of London B: Biological Sciences},
+  volume={272},
+  number={1568},
+  pages={1153--1161},
+  year={2005},
+  publisher={The Royal Society}
+}
+
+@article{ohta1973slightly,
+  title={Slightly deleterious mutant substitutions in evolution},
+  author={Ohta, Tomoko},
+  journal={Nature},
+  volume={246},
+  number={5428},
+  pages={96},
+  year={1973},
+  publisher={Nature Publishing Group}
+}
+
+@article{ralph2015role,
+  title={The role of standing variation in geographic convergent adaptation},
+  author={Ralph, Peter L and Coop, Graham},
+  journal={The American Naturalist},
+  volume={186},
+  number={S1},
+  pages={S5--S23},
+  year={2015},
+  publisher={University of Chicago Press Chicago, IL}
+}
+
+@Article{Howes-g6pd-preval,
+  author =       "R. E. Howes and F. B. Piel and A. P. Patil and O. A.
+                 Nyangiri and P. W. Gething and M. Dewi and M. M. Hogg
+                 and K. E. Battle and C. D. Padilla and J. K. Baird and
+                 S. I. Hay",
+  title =        "{{G}6{P}{D} deficiency prevalence and estimates of
+                 affected populations in malaria endemic countries: a
+                 geostatistical model-based map}",
+  journal =      "PLoS Medicine",
+  year =         "2012",
+  volume =       "9",
+  number =       "11",
+  pages =        "e1001339",
+}
+
+@Article{tishkoff-g6pd,
+  title =        "Haplotype Diversity and Linkage Disequilibrium at
+                 Human {G6PD}: Recent Origin of Alleles That Confer
+                 Malarial Resistance",
+  author =       "Sarah A. Tishkoff and Robert Varkonyi and Nelie
+                 Cahinhinan and Salem Abbes and George Argyropoulos and
+                 Giovanni Destro-Bisol and Anthi Drousiotou and Bruce
+                 Dangerfield and Gerard Lefranc and Jacques Loiselet and
+                 Anna Piro and Mark Stoneking and Antonio Tagarelli and
+                 Giuseppe Tagarelli and Elias H. Touma and Scott M.
+                 Williams and Andrew G. Clark",
+  journal =      "Science",
+  number =       "5529",
+  pages =        "455--462",
+  volume =       "293",
+  year =         "2001",
+  doi =          "10.1126/science.1061573",
+  eprint =       "http://www.sciencemag.org/cgi/reprint/293/5529/455.pdf",
+}
+
+@Article{Howes-g6pd-variants,
+  author =       "R. E. Howes and M. Dewi and F. B. Piel and W. M.
+                 Monteiro and K. E. Battle and J. P. Messina and A.
+                 Sakuntabhai and A. W. Satyagraha and T. N. Williams and
+                 J. K. Baird and S. I. Hay",
+  title =        "{Spatial distribution of {G6PD} deficiency variants
+                 across malaria-endemic regions}",
+  journal =      "Malar. J.",
+  year =         "2013",
+  volume =       "12",
+  pages =        "418",
+}
+
+
+@Article{Kwiatkowski:05,
+  author =       "D. P. Kwiatkowski",
+  title =        "{{H}ow malaria has affected the human genome and what
+                 human genetics can teach us about malaria}",
+  journal =      "Am. J. Hum. Genet.",
+  year =         "2005",
+  volume =       "77",
+  number =       "2",
+  pages =        "171--192",
+  month =        aug,
+}
+
 @article{lefebure2017less,
   title={Less effective selection leads to larger genomes},
   author={Lef{\'e}bure, Tristan and Morvan, Claire and Malard, Florian and Fran{\c{c}}ois, Cl{\'e}mentine and Konecny-Dupr{\'e}, Lara and Gu{\'e}guen, Laurent and Weiss-Gayet, Mich{\`e}le and Seguin-Orlando, Andaine and Ermini, Luca and Der Sarkissian, Clio and others},
@@ -16,6 +121,37 @@
   publisher={Cold Spring Harbor Lab}
 }
 
+@Article{Ruwende-g6pd,
+  author =       "C. Ruwende and S. C. Khoo and R. W. Snow and S. N.
+                 Yates and D. Kwiatkowski and S. Gupta and P. Warn and
+                 C. E. Allsopp and S. C. Gilbert and N. Peschu",
+  title =        "{Natural selection of hemi- and heterozygotes for
+                 {G6PD} deficiency in {Africa} by resistance to severe
+                 malaria}",
+  journal =      "Nature",
+  year =         "1995",
+  volume =       "376",
+  number =       "6537",
+  pages =        "246--249",
+  month =        jul,
+}
+
+@Article{Louicharoen-g6pd,
+  author =       "C. Louicharoen and E. Patin and R. Paul and I.
+                 Nuchprayoon and B. Witoonpanich and C.
+                 Peerapittayamongkol and I. Casademont and T. Sura and
+                 N. M. Laird and P. Singhasivanon and L. Quintana-Murci
+                 and A. Sakuntabhai",
+  title =        "{Positively selected {G6PD}-{Mahidol} mutation reduces
+                 \textit{{Plasmodium} vivax} density in Southeast
+                 {Asians}}",
+  journal =      "Science",
+  year =         "2009",
+  volume =       "326",
+  number =       "5959",
+  pages =        "1546--1549",
+  month =        dec,
+}
 
 @article{galtier2016adaptive,
   title={Adaptive protein evolution in animals and the effective population size hypothesis},
