--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -33,9 +33,9 @@
 \newcommand{\half}{\tfrac{1}{2}}
 
 %FOR compiling on xelatex 
-%\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
 %%comment out this line for overleaf
-%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
+\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}} %%comment out this line for overleaf
 \usepackage[colorinlistoftodos  ,disable]{todonotes}  % ,disable  ,disable
 
 
@@ -133,7 +133,7 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/One_locus_selection}
 \include{Chapters/Genetic_drift_selection}
 %\include{chapter-07}
-\include{Chapters/chapter-08}
+\include{Chapters/Linked_selection}
 \include{Chapters/multi_locus_sel}
 \bibliography{popgen_notes}
 
