Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{sella2009pervasive,
+  title={Pervasive natural selection in the Drosophila genome?},
+  author={Sella, Guy and Petrov, Dmitri A and Przeworski, Molly and Andolfatto, Peter},
+  journal={PLoS genetics},
+  volume={5},
+  number={6},
+  pages={e1000495},
+  year={2009},
+  publisher={Public Library of Science}
+}
+
 @article{ohta1972population,
   title={Population size and rate of evolution},
   author={Ohta, Tomoko},
