Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{hermisson2017soft,
+  title={Soft sweeps and beyond: understanding the patterns and probabilities of selection footprints under rapid adaptation},
+  author={Hermisson, Joachim and Pennings, Pleuni S},
+  journal={Methods in Ecology and Evolution},
+  volume={8},
+  number={6},
+  pages={700--716},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @article{sella2009pervasive,
   title={Pervasive natural selection in the Drosophila genome?},
   author={Sella, Guy and Petrov, Dmitri A and Przeworski, Molly and Andolfatto, Peter},
