Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,17 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{hohenlohe2010population,
+  title={Population genomics of parallel adaptation in threespine stickleback using sequenced RAD tags},
+  author={Hohenlohe, Paul A and Bassham, Susan and Etter, Paul D and Stiffler, Nicholas and Johnson, Eric A and Cresko, William A},
+  journal={PLoS genetics},
+  volume={6},
+  number={2},
+  pages={e1000862},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
 @article{hermisson2017soft,
   title={Soft sweeps and beyond: understanding the patterns and probabilities of selection footprints under rapid adaptation},
   author={Hermisson, Joachim and Pennings, Pleuni S},
