Added bunch of weak drift and hitchiking

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1298,6 +1298,126 @@ author = "David P.L. Toews and Scott A. Taylor and Rachel Vallender and Alan Bre
   publisher={American Association for the Advancement of Science}
 }
 
+@Article{Cai:09,
+   Author="Cai, J. J.  and Macpherson, J. M.  and Sella, G.  and Petrov, D. A. ",
+   Title="{{P}ervasive hitchhiking at coding and regulatory sites in humans}",
+   Journal="PLoS Genet.",
+   Year="2009",
+   Volume="5",
+   Pages="e1000336",
+   OPTMonth="Jan"
+}
+
+
+@Article{Stephan:92,
+  author = 	 {Stephan, W. and Wiehe, T.H.E. and Lenz, M.W. },
+  title = 	 {The effect of strongly selected substitutions on neutral polymorphism: analytical results based on diffusion theory.},
+  journal = 	 {Theor. Popul. Biol.},
+  year = 	 {1992},
+  OPTkey = 	 {},
+  volume = 	 {41},
+  OPTnumber = 	 {},
+  pages = 	 {237--254},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@Article{Santiago:98,
+   Author="Santiago, E.  and Caballero, A. ",
+   Title="{{E}ffective size and polymorphism of linked neutral loci in populations under directional selection}",
+   Journal="Genetics",
+   Year="1998",
+   Volume="149",
+   Pages="2105--2117",
+   OPTMonth="Aug"
+}
+
+
+
+
+@Article{Santiago:95,
+   Author="Santiago, E.  and Caballero, A. ",
+   Title="{{E}ffective size of populations under selection}",
+   Journal="Genetics",
+   Year="1995",
+   Volume="139",
+   Pages="1013--1030",
+   OPTMonth="Feb"
+}
+
+@Article{Przeworski:02,
+   Author="Przeworski, M. ",
+   Title="{{T}he signature of positive selection at randomly chosen loci}",
+   Journal="Genetics",
+   Year="2002",
+   Volume="160",
+   Pages="1179--1189",
+   OPTMonth="Mar"
+}
+
+
+@Article{Hudson:95b,
+   Author="Hudson, R. R.  and Kaplan, N. L. ",
+   Title="{{D}eleterious background selection with recombination}",
+   Journal="Genetics",
+   Year="1995",
+   Volume="141",
+   Pages="1605--1617",
+   OPTMonth="Dec"
+}
+
+
+@Article{Shapiro:07,
+   Author="Shapiro, J. A.  and Huang, W.  and Zhang, C.  and Hubisz, M. J.  and Lu, J.  and Turissini, D. A.  and Fang, S.  and Wang, H. Y.  and Hudson, R. R.  and Nielsen, R.  and Chen, Z.  and Wu, C. I. ",
+   Title="{{A}daptive genic evolution in the {\it {D}rosophila} genomes}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2007",
+   Volume="104",
+   Pages="2271--2276",
+   OPTMonth="Feb"
+}
+
+
+
+@Article{Wiehe:93,
+   Author="Wiehe, T. H.  and Stephan, W. ",
+   Title="{{A}nalysis of a genetic hitchhiking model, and its application to {D}{N}{A} polymorphism data from {\it {D}rosophila melanogaster}}",
+   Journal="Mol. Biol. Evol.",
+   Year="1993",
+   Volume="10",
+   Pages="842--854",
+   OPTMonth="Jul"
+}
+
+
+
+@Article{Fay:00,
+   Author="Fay, J. C.  and Wu, C. I. ",
+   Title="{{H}itchhiking under positive {D}arwinian selection}",
+   Journal="Genetics",
+   Year="2000",
+   Volume="155",
+   Pages="1405--1413",
+   OPTMonth="Jul"
+}
+
+
+
+@Article{Robertson:61,
+  author = 	 {Robertson, A.},
+  title = 	 { Inbreeding in artificial selection programmes.},
+  journal = 	 {Genet. Res.},
+  year = 	 {1961},
+  OPTkey = 	 {},
+  volume = 	 {2},
+  OPTnumber = 	 {},
+  pages = 	 {189–-194},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 
 @article{brandvain:14,
   title={Speciation and introgression between Mimulus nasutus and Mimulus guttatus},
@@ -1310,6 +1430,93 @@ author = "David P.L. Toews and Scott A. Taylor and Rachel Vallender and Alan Bre
   publisher={Public Library of Science}
 }
 
+@Article{Gordo:02,
+   Author="Gordo, I.  and Navarro, A.  and Charlesworth, B. ",
+   Title="{{M}uller's ratchet and the pattern of variation at a neutral locus}",
+   Journal="Genetics",
+   Year="2002",
+   Volume="161",
+   Pages="835--848",
+   OPTMonth="Jun"
+}
+
+@article{Braverman:95,
+   Author="Braverman, J. M.  and Hudson, R. R.  and Kaplan, N. L.  and Langley, C. H.  and Stephan, W. ",
+   Title="{{T}he hitchhiking effect on the site frequency spectrum of {D}{N}{A} polymorphisms}",
+   Journal="Genetics",
+   Year="1995",
+   Volume="140",
+   Pages="783--796",
+   OPTMonth="Jun"
+}
+
+
+@Article{Hudson:95,
+   Author="Hudson, R. R.  and Kaplan, N. L. ",
+   Title="{{T}he coalescent process and background selection}",
+   Journal="Philos. Trans. R. Soc. Lond., B, Biol. Sci.",
+   Year="1995",
+   Volume="349",
+   Pages="19--23",
+   OPTMonth="Jul"
+}
+
+@Article{Nordborg:96,
+   Author="Nordborg, M. and Charlesworth, B. and Charlesworth, D.",
+   Title="{{T}he effect of recombination on background selection}",
+   Journal="Genet. Res.",
+   Year="1996",
+   Volume="67",
+   Pages="159--174",
+   OPTMonth="Apr"
+}
+
+@Article{Charlesworth:97,
+   Author="Charlesworth, B. and Nordborg, M. and Charlesworth, D.",
+   Title="{{T}he effects of local selection, balanced polymorphism and background selection on equilibrium patterns of genetic diversity in subdivided populations}",
+   Journal="Genet. Res.",
+   Year="1997",
+   Volume="70",
+   Pages="155--174",
+   OPTMonth="Oct"
+}
+
+@Article{Gillespie:00,
+   Author="Gillespie, J. H. ",
+   Title="{{G}enetic drift in an infinite population. {T}he pseudohitchhiking model}",
+   Journal="Genetics",
+   Year="2000",
+   Volume="155",
+   Pages="909--919",
+   OPTMonth="Jun"
+}
+
+@Article{Kaplan:89,
+   Author="Kaplan, N. L.  and Hudson, R. R.  and Langley, C. H. ",
+   Title={The hitchhiking effect revisited},
+   Journal="Genetics",
+   Year="1989",
+   Volume="123",
+   Pages="887--899",
+   OPTMonth="Dec"
+}
+
+@Book{Lewontin:74,
+  author = 	 {Lewontin, R. C.},
+  ALTeditor = 	 {},
+  title = 	 { The Genetic Basis of Evolutionary Change.},
+  publisher = 	 {Columbia University Press, New York.},
+  year = 	 {1974},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
 
 
 @article{leffler:12,
